--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,10 @@ group = 'nameless.mysql-es-adapter'
 version = '1.0'
 
 apply plugin: 'java'
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
 apply plugin: 'java-library'
 apply plugin: 'io.spring.dependency-management'
 
